# ai-scientists

./: .env.example  .gitignore  PUBLICATION.md  README.md  RESULTS.md  pyproject.toml  run_base_matrix.sh  run_cc_batch.sh  run_cc_parallel.sh  run_mac_cc.sh  run_until_complete.sh  sync_mac_to_serene.sh
bench/: README.md  __init__.py  assemble.py  grade.py  run.sh
benchmarks/: SOURCES.md  coverage_matrix.md  manifest.json  sources.json
benchmarks/harbor_agents/: __init__.py  antigravity_oauth.py  codex_no_imagegen.py
benchmarks/specs/: AUTHORING.md
configs/: probe_tasks.json
modal_v2/: DESIGN.md  VALIDATION-PLAN.md  app.py
orchestration/: README.md  run_base_matrix.sh  run_mac_cc.sh  sync_to_remote.sh
results/: README.md
scripts/: agent.py  aggregate.py  agy_login_capture.sh  audit_completeness.py  audit_variant_validity.py  backfill_cc.sh  build_base_aff.py  build_bixbench_tasks.py  build_review_bundle.py  build_variants.py  calibration_ece.py  cap3_decompose.py  check_spec.py  collect_status.py  consistency_probe.py  contamination_probe.py  download_robust.py  download_tasks.py  extract.py  extract_agent.py  gen_default_dockerfile.py  generate_variants.py  grade_base_gemini.py  grade_bixbench.py  grade_reps.py  harbor_migrate.py  harbor_migrate_base.py  harbor_trace_extract.py  judge.py  materialize_variant.py  patch_grades.py  probe.py  progress_server.py  providers.py  refusal_judge.py  refusal_judge_gemini.py  refusal_summary.py  regrade_anthropic.py  regrade_claude_cli.py  regrade_gemini.py  (+12 more)
tests/: test_providers.py  test_variant_pipeline.py
(+166 files in other folders)
