[project]
name = "benchbench"
version = "0.0.1"
description = "BiomniBench-DA baseline agent + scoring harness"
requires-python = ">=3.12,<3.14"
dependencies = [
    "anthropic>=0.42.0",
    "huggingface_hub[cli]>=0.27.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.5.0",
    "statsmodels>=0.14.0",
    "lifelines>=0.30.3",
    "openpyxl>=3.1.5",
    "anndata>=0.12.16",
    "scanpy>=1.12.1",
    "h5py>=3.16.0",
    "pyyaml>=6.0.3",
    "xlrd>=2.0.2",
    "pytest>=9.0.3",
    "google-genai>=1.33.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_scientists"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
